<!--
  ~ This file is part of
  ~ ExtraHardMode Server Plugin for Minecraft
  ~
  ~ Copyright (C) 2012 Ryan Hamshire
  ~ Copyright (C) 2013 Diemex
  ~
  ~ ExtraHardMode is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ ExtraHardMode is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero Public License
  ~ along with ExtraHardMode.  If not, see <http://www.gnu.org/licenses/>.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- Project properties. -->
    <groupId>com.extrahardmode</groupId>
    <artifactId>ExtraHardMode</artifactId>
    <version>3.15.0</version>
    <name>ExtraHardMode</name>
    <description>New game rules and mechanics for Minecraft.</description>
    <url>https://dev.bukkit.org/projects/fun-hard-mode</url>

    <!-- Properties -->
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.mainclass>com.extrahardmode.ExtraHardMode</project.mainclass>
        <!--Use a profile to overwrite this-->
        <outputdir>${project.build.outputDirectory}</outputdir>
        <mc-version>1.18</mc-version>
        <bukkit-ver>R0.1-SNAPSHOT</bukkit-ver>
        <testDir>${basedir}/src/test/</testDir>
        <srcDir>${basedir}/src/main/java/</srcDir>
    </properties>

    <!-- Build instructions -->
    <build>
        <finalName>${project.name}</finalName>
        <defaultGoal>package</defaultGoal>
        <testSourceDirectory>${testDir}</testSourceDirectory>
        <sourceDirectory>${srcDir}</sourceDirectory>

        <resources>
            <resource>
                <includes>
                    <include>plugin.yml</include>
                </includes>
                <directory>${basedir}/src/main/resources/</directory>
                <filtering>true</filtering>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>

            <!-- Shade Metrics -->
            <!--<plugin>-->
                <!--<groupId>org.apache.maven.plugins</groupId>-->
                <!--<artifactId>maven-shade-plugin</artifactId>-->
                <!--<version>1.5</version>-->
                <!--<executions>-->
                    <!--<execution>-->
                        <!--<phase>package</phase>-->
                        <!--<goals>-->
                            <!--<goal>shade</goal>-->
                        <!--</goals>-->
                        <!--<configuration>-->
                            <!--<artifactSet>-->
                                <!--<includes>-->
                                    <!--<include>org.mcstats.bukkit:metrics</include>-->
                                <!--</includes>-->
                            <!--</artifactSet>-->
                            <!--<relocations>-->
                                <!--<relocation>-->
                                    <!--<pattern>org.mcstats</pattern>-->
                                    <!--<shadedPattern>com.extrahardmode.metrics</shadedPattern>-->
                                <!--</relocation>-->
                            <!--</relocations>-->
                            <!--&lt;!&ndash;<minimizeJar>true</minimizeJar>&ndash;&gt;-->
                        <!--</configuration>-->
                    <!--</execution>-->
                <!--</executions>-->
            <!--</plugin>-->

            <!-- Use a profile to override the outputdir, e.g. to a local testserver-->
            <!--<plugin>-->
                <!--<groupId>org.apache.maven.plugins</groupId>-->
                <!--<artifactId>maven-jar-plugin</artifactId>-->
                <!--<version>2.4</version>-->
                <!--<configuration>-->
                    <!--<outputDirectory>${outputdir}</outputDirectory>-->
                <!--</configuration>-->
            <!--</plugin>-->

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <minimizeJar>true</minimizeJar>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                    <artifactSet>
                        <includes>
                            <include>org.bstats:bstats-bukkit</include>
                        </includes>
                    </artifactSet>
                    <relocations>
                        <relocation>
                            <pattern>org.bstats</pattern>
                            <shadedPattern>com.extrahardmode</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- append git commit hash to version-->
            <plugin>
                <groupId>pl.project13.maven</groupId>
                <artifactId>git-commit-id-plugin</artifactId>
                <version>4.0.5</version>
                <executions>
                    <execution>
                        <id>get-the-git-infos</id>
                        <goals>
                            <goal>revision</goal>
                        </goals>
                        <phase>validate</phase>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <!-- Repositories -->
    <repositories>
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <repository>
            <id>github-releases</id>
            <url>https://di3mex.github.io/repo_bukkit/releases/</url>
        </repository>
        <repository>
            <id>github-snapshots</id>
            <url>https://di3mex.github.io/repo_bukkit/snapshots/</url>
        </repository>
        <!--<repository>-->
            <!--<id>prism-repo</id>-->
            <!--<url>http://dhmc.us:8081/nexus/content/repositories/releases/</url>-->
        <!--</repository>-->
        <repository>
            <id>md_5-releases</id>
            <url>https://repo.md-5.net/content/repositories/releases/</url>
        </repository>
        <repository>
            <id>md_5-snapshots</id>
            <url>https://repo.md-5.net/content/repositories/snapshots/</url>
        </repository>
        <!-- Spigot Repo -->
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <!--WorldGuard Repo -->
        <repository>
            <id>enginehub-repo</id>
            <url>https://maven.enginehub.org/repo/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>CodeMC</id>
            <url>https://repo.codemc.org/repository/maven-public/</url>
        </repository>
        <!--<repository>
            <id>local</id>
            <url>http://localhost:8081/nexus/content/groups/public/</url>
        </repository>-->
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>apache.snapshots</id>
            <url>https://repository.apache.org/snapshots/</url>
        </pluginRepository>
    </pluginRepositories>

    <!-- Dependencies -->
    <dependencies>
        <!-- Spigot -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>${mc-version}-${bukkit-ver}</version>
            <scope>provided</scope>
        </dependency>
        <!-- CraftBukkit -> because we are too lazy to add the jar to our build path for runtime debugging :D -->
        <!--<dependency>-->
            <!--<groupId>org.bukkit</groupId>-->
            <!--<artifactId>craftbukkit</artifactId>-->
            <!--<version>${mc-version}-${bukkit-ver}</version>-->
            <!--<scope>provided</scope>-->
        <!--</dependency>-->
        <!-- Metrics for stats -->
        <!--<dependency>-->
            <!--<groupId>org.mcstats.bukkit</groupId>-->
            <!--<artifactId>metrics</artifactId>-->
            <!--<version>R7</version>-->
        <!--</dependency>-->

        <!-- Unit testing dependencies -->
        <!-- JUnit: Assertions and test framework -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <!-- Mock bukkit's interfaces -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>4.1.0</version>
            <scope>test</scope>
        </dependency>
        <!-- Mock final methods and stuff -->
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-api-mockito2</artifactId>
            <version>2.0.9</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-core</artifactId>
            <version>2.0.9</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-module-junit4</artifactId>
            <version>2.0.9</version>
            <scope>test</scope>
        </dependency>

        <!-- Compatibility Dependencies -->
        <!-- WorldGuard -->
        <dependency>
            <groupId>com.sk89q</groupId>
            <artifactId>worldguard</artifactId>
            <version>6.1.1-SNAPSHOT</version>
        </dependency>

        <!-- Block Loggers -->
        <!-- Prism -->
        <!--<dependency>-->
            <!--<groupId>me.botsko</groupId>-->
            <!--<artifactId>prism</artifactId>-->
            <!--<version>2.0</version>-->
            <!--&lt;!&ndash;<version>2.0.6</version>&ndash;&gt;-->
        <!--</dependency>-->
        <!-- CoreProtect -->
        <dependency>
            <groupId>net.coreprotect.CoreProtect</groupId>
            <artifactId>CoreProtect</artifactId>
            <version>2.0.8</version>
        </dependency>
        <!-- LogBlock -->
        <dependency>
            <groupId>de.diddiz</groupId>
            <artifactId>logblock</artifactId>
            <version>1.8</version>
        </dependency>
        <!-- HawkEye -->
        <dependency>
            <groupId>uk.co.oliwali</groupId>
            <artifactId>HawkEye</artifactId>
            <version>1.6.0</version>
        </dependency>

        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>1.8</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.10.9</version>
            <scope>provided</scope>
        </dependency>

    </dependencies>

    <!-- Developers -->
    <developers>
        <!-- Former Author -->
        <developer>
            <id>bigscary</id>
            <url>https://github.com/bigscary</url>
        </developer>
        <!-- Former Author -->
        <developer>
            <id>Diemex</id>
            <email>di.em.ex@gmx.de</email>
            <url>https://github.com/Di3mex</url>
            <timezone>GMT</timezone>
        </developer>
        <!-- Current Maintainer -->
        <developer>
            <id>RoboMWM</id>
            <url>https://github.com/RoboMWM</url>
        </developer>
        <!-- Contributor -->
        <developer>
            <id>Mitsugaru</id>
            <email>mitsugaru@gmail.com</email>
            <url>https://github.com/Mitsugaru</url>
            <timezone>-7</timezone>
        </developer>
        <developer>
            <id>bluekelp</id>
            <email>bukkit-dev@bluekelp.com</email>
            <url>https://github.com/bluekelp</url>
            <timezone>-7</timezone>
            <roles>
                <role>contributor</role>
            </roles>
        </developer>
    </developers>

</project>
